# grim

./: README
cmake/: CMakeLists.txt
cmake/archive/: CMakeLists.txt
cmake/audio/: CMakeLists.txt
cmake/audio/formats/flac/: CMakeLists.txt
cmake/audio/formats/vorbis/: CMakeLists.txt
cmake/audio/formats/wave/: CMakeLists.txt
cmake/modules/: FindFLAC.cmake  FindGrim.cmake  FindOgg.cmake  FindOpenAL.cmake  FindVorbis.cmake  FindZLib.cmake  Macros.cmake
cmake/tools/: CMakeLists.txt
demo/: CMakeLists.txt  readme.txt
demo/res/: res.qrc
demo/src/: archivetest.cpp  archivetest.h  audiowidget.cpp  audiowidget.h  browsermodel.cpp  browsermodel.h  languagemanager.cpp  languagemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  player.cpp  player.h  playerwidget.cpp  playerwidget.h  pointsmodel.cpp  pointsmodel.h  precompiledheaders.h  resources.cpp  resources.h
demo/translations/: demo_en.ts  demo_ru.ts  info_en.ts  info_ru.ts
demo/ui/: aboutdialog.ui  archivetest.ui  audiowidget.ui  browserwidget.ui  mainwindow.ui  playerwidget.ui
doc/: Doxyfile
doc/src/: archive.dox  audio.dox  installation.dox  mainpage.dox  modules.dox  packageoverview.dox  prerequisites.dox  quickstart.dox  tools.dox
examples/trivialarchive/: CMakeLists.txt  main.cpp
examples/trivialaudio/: CMakeLists.txt  main.cpp
include/grim/archive/: archive.h  archiveglobal.h  archivemanager.h
include/grim/audio/: audiobuffer.h  audiobufferdata.h  audiocapturedevice.h  audiocontext.h  audiodevice.h  audioformatplugin.h  audioglobal.h  audiolistener.h  audiomanager.h  audiomath.h  audiosource.h
include/grim/tools/: datastreamreader.h  fpscounter.h  idgenerator.h  ringbuffer.h  speedcounter.h  toolsglobal.h  utils.h
src/archive/: archive.cpp  archive.h  archive_p.cpp  archive_p.h  archivefile.cpp  archiveglobal.h  archivemanager.cpp  archivemanager.h  archivemanager_p.h  precompiledheaders.h
src/audio/: audio_p.h  audiobuffer.cpp  audiobuffer.h  audiobufferdata.cpp  audiobufferdata.h  audiobufferloader.cpp  audiobufferloader.h  audiocapturedevice.cpp  audiocapturedevice.h  audiocontext.cpp  audiocontext.h  audiodevice.cpp  audiodevice.h  audioformatplugin.cpp  audioformatplugin.h  audioglobal.h  audiolistener.cpp  audiolistener.h  audiomanager.cpp  audiomanager.h  audiomath.cpp  audiomath.h  audiosource.cpp  audiosource.h  precompiledheaders.h
src/audio/formats/: audioflacformatplugin.cpp  audioflacformatplugin.h  audiovorbisformatplugin.cpp  audiovorbisformatplugin.h  audiowaveformatplugin.cpp  audiowaveformatplugin.h
src/tools/: datastreamreader.cpp  datastreamreader.h  fpscounter.cpp  fpscounter.h  idgenerator.cpp  idgenerator.h  precompiledheaders.h  ringbuffer.cpp  ringbuffer.h  speedcounter.cpp  speedcounter.h  toolsglobal.h  utils.cpp  utils.h
translations/: grim_ru.ts
